# geoseer

./: .gitignore  LICENSE  README.md  fpq_input_window_-4.0_to_36.0.txt  geoseer_env.yml  nav_interpolate.py  requirements.txt  setup.cfg  setup.py  spec-file.txt  test.txt
data/: LineA_marker_coordinates.txt  LineB_marker_coordinates.txt  LineC_marker_coordinates.txt  MarkerTraceLocations.txt
data/DFNGEN/: DFNGenerator_configuration_v1.txt  MFCentrepoints_final.txt  Macrofractures_final.txt  Microfractures_final.txt  logFile_X0_Y10.txt
geostar/: crs_transform.py
src/geoseer/: dfngen_reader.ipynb  dfngen_reader.py  fpq_input_window_0.0_to_15.0.txt  fpq_input_window_0.0_to_40.0.txt  fpq_input_window_713_to_715.txt  fractureimport.py  poly2fab.py  poly2fpq.py  poly_frac_interp_processing.py  test.csv
src/geoseer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/geostar/: nav_data.py
