[metadata]
name = geoseer
version = 0.0.a0.dev1
author = Simon Oldfield
description = A collection of scripts for geoscience applications
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = python3, geoscience, geology
license = Apache License Version 2.0
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Scientific/Engineering

[options]
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    numpy

[options.packages.find]
where = src
include = pkg*
exclude = additional

[options.package_data]
* = *.txt